# osp-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  package-lock.json  project_plan.txt  pyproject.toml  setup_help.txt  storage-cors.json  wait-for-db.sh
alembic/: env.py
alembic/versions/: 0ceee3f09f67_initial_migration.py  20250814_add_location_column.py  373336946331_initial_migration.py  5c9e542b3fa3_initial_migration.py  9c8b7a6d5f4e_add_verification_fields.py  a1b2c3d4e5f6_add_orientation_vector.py  bdc26436cf0c_initial_migration.py  eb6845fcc5c9_initial_migration.py  jfileajfje34384_add_thumbnail_url.py
app/: main.py
app/api/v1/endpoints/: __init__.py  auth.py  comments.py  media.py  users.py
app/core/: config.py  logging.py
app/db/: base.py  models.py  session.py
app/db/models/: __init__.py  claim.py  comment.py  media.py  media_type.py  trust_metric.py  user.py  user_interaction.py  verification.py
app/middleware/: auth.py
app/models/: auth.py  comment.py  media.py
app/schemas/: media.py
app/security/: __init__.py  jwt.py
app/services/: storage.py  trust.py  user_service.py  verification.py
app/services/auth/: apple_auth.py  google_auth.py
app/services/media/: service.py
src/schemas/: media.py
tests/api/v1/: conftest.py  test_comments.py  test_media.py  test_media_endpoint.py
tests/integration/: auth_test.py
tests/integration/api/: test_api_media.py
tests/integration/api/v1/: test_comments_integration.py
tests/integration/db/: test_media_trust_score.py
tests/unit/: test_storage.py
tests/unit/services/: test_trust.py
